Revert the change which dropped the FilterFactory suffix to make the PR smaller
Signed-off-by: Tom Bentley <tbentley@redhat.com>